--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -66,10 +66,18 @@
 <!-- === Upload Related Tools === -->
 <div id="upload-section"></div>  <!-- 🔥 anchor target -->
 
+ <div class="module-item blue" onclick="window.open('/student_login', '_blank');">
+    <i class="fa-solid fa-user-graduate"></i>
+    <span>Student Portal</span>
+</div>
+
+
 <div class="module-item blue" data-page="uploads.html">
   <i class="fa-solid fa-upload"></i>
   Upload Exams
 </div>
+
+
 
 
     <div class="module-item teal" data-page="past_questions.html">
@@ -77,10 +85,7 @@
       Past Questions
     </div>
 
-    <div class="module-item dark" data-page="exam_dashboard.html">
-      <i class="fa-solid fa-list-check"></i>
-      Exam Dashboard
-    </div>
+
 
     <!-- === Results Related Tools === -->
     <div class="module-item green" data-page="dash_results.html">
