Redesigned & Improved the students exam  modal

--- a/templates/admin_results.html
+++ b/templates/admin_results.html
@@ -41,7 +41,7 @@
                     {% for sub in [
                         "BIOLOGY","CHEMISTRY","COMPUTER STUDIES","ECONOMICS","ENGLISH LANGUAGE",
                         "GEOGRAPHY","GOVERNMENT","MATHEMATICS","PHYSICS","TECHNICAL DRAWING",
-                        "FINANCIAL ACCOUNTING","LITERATURE-IN-ENGLISH"
+                        "ACCOUNTING","LITERATURE-IN-ENGLISH"
                     ] %}
                     <option value="{{ sub }}">{{ sub }}</option>
                     {% endfor %}
